--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,9 @@
 {
+  "routes": [
+    { "src": "/css/(.*)", "dest": "/css/$1" },
+    { "src": "/js/(.*)", "dest": "/js/$1" },
+    { "src": "/(.*)", "dest": "/index.html" }
+  ],
   "rewrites": [
     {
       "source": "/api/(.*)",
